# RobotWorkspaceVisualizer

./: readme.md
codebase/Alpha/: Robot.cpp  Robot.h  getWS.cpp
codebase/Alpha/pcdSaver/: CMakeLists.txt  main.cpp
codebase/Alpha/pcd_viewer/: CMakeLists.txt  package.xml
codebase/Alpha/pcd_viewer/launch/: runthis.launch
codebase/Alpha/pcd_viewer/rviz/: rviz.rviz
codebase/Alpha/pcd_viewer/src/: pcd_viewer.cpp
codebase/Alpha/urdf_parser/: CMakeLists.txt  joints.cpp  links.cpp  pose.cpp  robot_model.cpp  ur5.urdf  urdf_parser.cpp
codebase/Beta/: CMakeLists.txt
codebase/Beta/include/: CMakeLists.txt  Robot.cpp  Robot.h  getWS.cpp  lattice.h
codebase/Beta/pcdSaver/: CMakeLists.txt  main.cpp
codebase/Beta/src/: main.cpp
codebase/Beta/tests/: 2_link.urdf  3dof.urdf  CMakeLists.txt  broken.urdf  test_fk1.cpp  test_urdf1.cpp  test_urdf2.cpp  test_urdf3.cpp  test_ws1.cpp  test_ws2.cpp  test_ws3.cpp  test_ws4.cpp  ur5.urdf
codebase/forward_kinematics/: forward_kinematics.h
